2013-01-18  Balazs Kilvady  <kilvadyb@homejinni.com>

        r134080 causes heap problem on linux systems where PAGESIZE != 4096
        https://bugs.webkit.org/show_bug.cgi?id=102828

        Reviewed by Mark Hahnenberg.

        Make MarkStackSegment::blockSize as the capacity of segments of a MarkStackArray.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreExports.def:
        * heap/MarkStack.cpp:
        (JSC):
        (JSC::MarkStackArray::MarkStackArray):
        (JSC::MarkStackArray::expand):
        (JSC::MarkStackArray::donateSomeCellsTo):
        (JSC::MarkStackArray::stealSomeCellsFrom):
        * heap/MarkStack.h:
        (JSC::MarkStackSegment::data):
        (CapacityFromSize):
        (MarkStackArray):
        * heap/MarkStackInlines.h:
        (JSC::MarkStackArray::setTopForFullSegment):
        (JSC::MarkStackArray::append):
        (JSC::MarkStackArray::isEmpty):
        (JSC::MarkStackArray::size):
        * runtime/Options.h:
        (JSC):

2013-01-18  Geoffrey Garen  <ggaren@apple.com>

        Weak GC maps should be easier to use
        https://bugs.webkit.org/show_bug.cgi?id=107312

        Reviewed by Sam Weinig.

        This patch changes WeakGCMap to not use a WeakImpl finalizer to remove
        items from the map, and to instead have the map automatically remove
        stale items itself upon insertion. This has a few advantages:

        (1) WeakGCMap is now compatible with all the specializations you would
        use for HashMap.

        (2) There's no need for clients to write special finalization munging
        functions.

        (3) Clients can specify custom value finalizers if they like.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreExports.def: Def!

        * API/JSWeakObjectMapRefPrivate.cpp: Setter no longer requires a global
        data, since we've reduced interdependency.

        * heap/Handle.h: No more need to forward declare, since we've reduced
        interdependency.
